# teaql-rs

./: .gitignore  AI_MAINTENANCE_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  diff.txt  enhance-unit-test.MD  publish.sh  publish_0.9.9.sh  scratch.rs  test.db  test_str_cmp  test_str_cmp.rs
.github/workflows/: ci.yml  coverage.yml
docs/: 2026-05-30-unified-log-entry-design.md  2026-06-02-data-service-executor-design.md  2026-07-02-query-interception-multi-tenant-baseline.md  2026-07-20-cloud-integration-design.md  hacker-news-teaql-ddd-data-runtime.md
docs/issues/: issue-missing-register-executor.md  issue-postgres-null-binding.md  issue-relation-mapping-naming-conflict.md
examples/: Cargo.toml
examples/src/: lib.rs
teaql-cache-integration-redis/: Cargo.toml
teaql-cache-integration-redis/src/: lib.rs
teaql-cloud-actuator/: Cargo.toml  README.md
teaql-cloud-actuator/src/: health_handler.rs  info_handler.rs  lib.rs  metrics_handler.rs  state.rs
teaql-cloud-consul/: Cargo.toml
teaql-cloud-consul/src/: lib.rs
teaql-cloud-core/: Cargo.toml  README.md
teaql-cloud-core/src/: config.rs  discovery.rs  error.rs  health.rs  lib.rs  lifecycle.rs  metrics.rs  model.rs  registry.rs
teaql-cloud-nacos/: Cargo.toml  README.md
teaql-cloud-nacos/src/: cloud.rs  config.rs  lib.rs
teaql-cloud-starter/: Cargo.toml  README.md
teaql-cloud-starter/src/: lib.rs
teaql-cloud-tests/: Cargo.toml
teaql-cloud-tests/src/: lib.rs
teaql-cloud-tests/tests/: actuator_test.rs  lifecycle_test.rs  starter_test.rs
teaql-core/: Cargo.toml  README.md
teaql-core/src/: entity.rs  entity_graph.rs  eval.rs  expr.rs  lib.rs  list.rs  meta.rs  mutation.rs  naming.rs  query.rs  request.rs  safe_expression.rs  serde_utils.rs  trace.rs  value.rs  web.rs  xls.rs
teaql-data-service/: Cargo.toml  README.md
teaql-data-service/src/: lib.rs
teaql-dialect-mysql/: Cargo.toml
teaql-dialect-mysql/src/: lib.rs
teaql-dialect-pg/: Cargo.toml  README.md
teaql-dialect-pg/src/: lib.rs
teaql-dialect-sqlite/: Cargo.toml  README.md
teaql-dialect-sqlite/src/: lib.rs
teaql-macros/: Cargo.toml  README.md
teaql-macros/src/: attr.rs  derive_impl.rs  lib.rs  mapping.rs  types.rs
teaql-provider-linux/: Cargo.toml  README.md  test_procfs.rs
teaql-provider-linux/src/: error.rs  executor.rs  lib.rs
teaql-provider-linux/src/collector/: mod.rs  process.rs  system_info.rs  thread.rs
teaql-provider-meilisearch/: Cargo.toml
teaql-provider-meilisearch/src/: lib.rs
teaql-provider-mysql/: Cargo.toml
teaql-provider-mysql/src/: lib.rs
teaql-provider-postgres/: Cargo.toml  README.md
teaql-provider-postgres/src/: lib.rs
teaql-provider-rusqlite/: Cargo.toml
teaql-provider-rusqlite/src/: lib.rs
teaql-provider-sqlite/: Cargo.toml  README.md
teaql-provider-sqlite/src/: lib.rs
teaql-provider-sqlx-mysql/: Cargo.toml  README.md
teaql-provider-sqlx-mysql/src/: lib.rs
teaql-provider-sqlx-postgres/: Cargo.toml
teaql-provider-sqlx-postgres/src/: lib.rs
teaql-provider-sqlx-sqlite/: Cargo.toml  README.md
teaql-provider-sqlx-sqlite/src/: lib.rs
teaql-runtime/: ARCHITECTURE_INCREMENTAL_LEDGER.md  Cargo.toml  LOGGING_DESIGN.md  README.md
teaql-runtime/src/: checker.rs  context.rs  entity_runtime.rs  entity_save.rs  entity_status.rs  error.rs  event.rs  generated_support.rs  graph.rs  id.rs  inmemory_engine.rs  language.rs  lib.rs  log_formatter.rs  log_header.txt  memory.rs  registry.rs  repository.rs  sqlx_support.rs
teaql-runtime/src/data_service/: base.rs  cache.rs  context.rs  executor.rs  graph.rs  helpers.rs  mod.rs  relation.rs  resolved.rs  types.rs
teaql-runtime/src/repository/: base.rs  cache.rs  context.rs  executor.rs  graph.rs  helpers.rs  mod.rs  relation.rs  resolved.rs  types.rs
teaql-runtime/tests/: test_incremental_ledger.rs
teaql-sql/: Cargo.toml  README.md
teaql-sql/src/: dialect.rs  executor.rs  lib.rs  types.rs
teaql-web-integration-axum/: Cargo.toml
teaql-web-integration-axum/src/: lib.rs
