[workspace]
members = [
    "teaql-core",
    "teaql-sql",
    "teaql-runtime",
    "teaql-provider-sqlx-postgres",
    "teaql-provider-sqlx-sqlite",
    "teaql-provider-sqlx-mysql",
    "teaql-provider-rusqlite",
    "teaql-macros",
    "examples", "teaql-data-service",
]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Philip"]
description = "TeaQL core, SQL, runtime, dialect, and macro crates for model-driven data access"
repository = "https://github.com/teaql/teaql-rs"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql", "macros", "json", "chrono", "rust_decimal"] }
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

teaql-core = { path = "teaql-core", version = "3.0.0" }
teaql-macros = { path = "teaql-macros", version = "3.0.0" }
teaql-runtime = { path = "teaql-runtime", version = "3.0.0" }
teaql-sql = { path = "teaql-sql", version = "3.0.0" }
teaql-provider-rusqlite = { path = "teaql-provider-rusqlite", version = "3.0.0" }
teaql-provider-sqlx-postgres = { path = "teaql-provider-sqlx-postgres", version = "3.0.0" }
teaql-provider-sqlx-sqlite = { path = "teaql-provider-sqlx-sqlite", version = "3.0.0" }
teaql-provider-sqlx-mysql = { path = "teaql-provider-sqlx-mysql", version = "3.0.0" }
teaql-data-service = { path = "teaql-data-service", version = "3.0.0" }
