[workspace]
members = [
    "teaql-core",
    "teaql-sql",
    "teaql-runtime",
    "teaql-provider-postgres",
    "teaql-provider-mysql",
    "teaql-provider-sqlite",
    "teaql-macros",
    "examples", "teaql-data-service", "teaql-web-integration-axum", "teaql-cache-integration-redis", "teaql-provider-meilisearch",
]
resolver = "2"

[workspace.package]
version = "4.0.4"
edition = "2024"
license = "Apache-2.0"
authors = ["Philip"]
description = "TeaQL core, SQL, runtime, dialect, and macro crates for model-driven data access"
repository = "https://github.com/teaql/teaql-rs"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

teaql-core = { path = "teaql-core", version = "4.0.3" }
teaql-macros = { path = "teaql-macros", version = "4.0.3" }
teaql-runtime = { path = "teaql-runtime", version = "4.0.3" }
teaql-sql = { path = "teaql-sql", version = "4.0.3" }
teaql-provider-sqlite = { path = "teaql-provider-sqlite", version = "4.0.3" }
teaql-provider-postgres = { path = "teaql-provider-postgres", version = "4.0.3" }
teaql-provider-mysql = { path = "teaql-provider-mysql", version = "4.0.3" }
teaql-data-service = { path = "teaql-data-service", version = "4.0.3" }
