[package]
name = "teaql-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
teaql-core = { path = "../teaql-core", version = "0.8.1" }
teaql-macros = { path = "../teaql-macros", version = "0.8.1" }
teaql-provider-sqlx-postgres = { path = "../teaql-provider-sqlx-postgres", version = "0.8.1" }
teaql-provider-sqlx-sqlite = { path = "../teaql-provider-sqlx-sqlite", version = "0.8.1" }
teaql-runtime = { path = "../teaql-runtime", version = "0.8.1" }
teaql-sql = { path = "../teaql-sql", version = "0.8.1" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "json", "chrono", "rust_decimal"] }
tokio = { workspace = true }
