[package]
name = "teaql-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
teaql-core = { workspace = true }
teaql-macros = { workspace = true }
teaql-provider-sqlx-postgres = { workspace = true }
teaql-provider-sqlx-sqlite = { workspace = true }
teaql-runtime = { workspace = true }
teaql-sql = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "json", "chrono", "rust_decimal"] }
tokio = { workspace = true }
