[package]
name = "teaql-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
teaql-core = { workspace = true }
teaql-macros = { workspace = true }
# teaql-provider-postgres = { workspace = true }
teaql-provider-sqlite = { workspace = true }
teaql-runtime = { workspace = true }
teaql-sql = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
