[package]
name = "teaql-cache-integration-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
teaql-runtime = { workspace = true }
teaql-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
redis = { version = "1.4", features = ["tokio-comp"] }
