[package]
name = "teaql-cloud-actuator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Health, info, and metrics endpoints for TeaQL cloud integration (Spring Boot Actuator compatible)"
repository.workspace = true
readme = "README.md"

[dependencies]
teaql-cloud-core = { path = "../teaql-cloud-core", version = "4.1.1" }
axum = { version = "0.7", features = ["macros"] }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }

[dev-dependencies]
tower = "0.5"
async-trait = { workspace = true }
