[package]
name = "teaql-cloud-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core trait definitions and shared models for TeaQL cloud integration"
repository.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1", features = ["sync", "signal", "time", "rt", "macros"] }
