[package]
name = "teaql-cloud-nacos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nacos v2 gRPC implementation for TeaQL cloud integration"
repository.workspace = true
readme = "README.md"

[dependencies]
teaql-cloud-core = { path = "../teaql-cloud-core", version = "4.1.1" }
nacos-sdk = "=0.8"
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
