[package]
name = "teaql-cloud-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
teaql-cloud-core = { path = "../teaql-cloud-core" }
teaql-cloud-actuator = { path = "../teaql-cloud-actuator" }
teaql-cloud-nacos = { path = "../teaql-cloud-nacos" }
teaql-cloud-starter = { path = "../teaql-cloud-starter" }
axum = { version = "0.7" }
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = { workspace = true }
serde_json = "1"
tower = "0.5"
