[package]
name = "teaql-dialect-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "TeaQL MySQL SQL dialect"
repository.workspace = true

[dependencies]
teaql-core = { path = "../teaql-core" }
teaql-sql = { path = "../teaql-sql" }
