[package]
name = "teaql-dialect-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
teaql-core = { path = "../teaql-core", version = "0.7.4" }
teaql-sql = { path = "../teaql-sql", version = "0.7.4" }

[dev-dependencies]
teaql-core = { path = "../teaql-core", version = "0.7.4" }
