[package]
name = "teaql-provider-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "TeaQL data service provider for Linux system information via /proc"

[dependencies]
teaql-core = { workspace = true }
teaql-data-service = { workspace = true }
teaql-runtime = { workspace = true }
procfs = "0.17"
chrono.workspace = true
