[package]
name = "teaql-provider-meilisearch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
teaql-core = { workspace = true }
teaql-data-service = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
