[package]
name = "teaql-provider-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PostgreSQL provider adapter for TeaQL runtime"
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true, features = ["db-postgres"] }
serde_json = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
bytes = "1"
teaql-core = { workspace = true }
teaql-runtime = { workspace = true }
teaql-sql = { workspace = true }
tokio = { workspace = true }
