[package]
name = "teaql-provider-rusqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "rusqlite provider adapter for TeaQL runtime"
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
rusqlite = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
teaql-core = { path = "../teaql-core", version = "0.7.6" }
teaql-runtime = { path = "../teaql-runtime", version = "0.7.6" }
teaql-sql = { path = "../teaql-sql", version = "0.7.6" }
