[package]
name = "teaql-provider-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "rusqlite provider adapter for TeaQL runtime"
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
rusqlite = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
teaql-core = { workspace = true }
teaql-runtime = { workspace = true }
teaql-sql = { workspace = true }
