[package]
name = "teaql-provider-sqlx-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MySQL SQLx provider adapter for TeaQL runtime"
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "json", "chrono", "rust_decimal"] }
teaql-core = { path = "../teaql-core", version = "0.7.5" }
teaql-runtime = { path = "../teaql-runtime", version = "0.7.5" }
teaql-sql = { path = "../teaql-sql", version = "0.7.5" }
tokio = { workspace = true }
