[package]
name = "teaql-provider-sqlx-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite SQLx provider adapter for TeaQL runtime"
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "json", "chrono", "rust_decimal"] }
teaql-core = { path = "../teaql-core", version = "0.9.0", registry = "teaql" }
teaql-runtime = { path = "../teaql-runtime", version = "0.9.0", registry = "teaql" }
teaql-sql = { path = "../teaql-sql", version = "0.9.0", registry = "teaql" }
tokio = { workspace = true }
