[package]
name = "teaql-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
teaql-core = { path = "../teaql-core", version = "0.8.0" }
teaql-sql = { path = "../teaql-sql", version = "0.8.0" }

[dev-dependencies]
teaql-macros = { path = "../teaql-macros", version = "0.8.0" }
tokio = { workspace = true }
