[package]
name = "teaql-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
teaql-core = { path = "../teaql-core", version = "0.9.0", registry = "teaql" }
teaql-sql = { path = "../teaql-sql", version = "0.9.0", registry = "teaql" }

[dev-dependencies]
teaql-macros = { path = "../teaql-macros", version = "0.9.0", registry = "teaql" }
tokio = { workspace = true }
