[package]
name = "teaql-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
teaql-core = { workspace = true }
teaql-sql = { workspace = true }
teaql-data-service = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
teaql-macros = { workspace = true }
tokio = { workspace = true }
