[package]
name = "teaql-web-integration-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
teaql-runtime = { workspace = true }
teaql-core = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
